; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/resolv/extr_res_findzonecut.c_res_findzonecut.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/resolv/extr_res_findzonecut.c_res_findzonecut.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }
%union.res_sockaddr_union = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.in_addr }

@RES_IPV4ONLY = common dso_local global i32 0, align 4
@RES_IPV6ONLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @res_findzonecut(i32 %0, i8* %1, i32 %2, i32 %3, i8* %4, i64 %5, %struct.in_addr* %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca %struct.in_addr*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca %union.res_sockaddr_union*, align 8
  store i32 %0, i32* %10, align 4
  store i8* %1, i8** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i8* %4, i8** %14, align 8
  store i64 %5, i64* %15, align 8
  store %struct.in_addr* %6, %struct.in_addr** %16, align 8
  store i32 %7, i32* %17, align 4
  %21 = load i32, i32* @RES_IPV4ONLY, align 4
  %22 = load i32, i32* %13, align 4
  %23 = or i32 %22, %21
  store i32 %23, i32* %13, align 4
  %24 = load i32, i32* @RES_IPV6ONLY, align 4
  %25 = xor i32 %24, -1
  %26 = load i32, i32* %13, align 4
  %27 = and i32 %26, %25
  store i32 %27, i32* %13, align 4
  %28 = load i32, i32* %17, align 4
  %29 = call %union.res_sockaddr_union* @calloc(i32 %28, i32 4)
  store %union.res_sockaddr_union* %29, %union.res_sockaddr_union** %20, align 8
  %30 = load %union.res_sockaddr_union*, %union.res_sockaddr_union** %20, align 8
  %31 = icmp eq %union.res_sockaddr_union* %30, null
  br i1 %31, label %32, label %33

32:                                               ; preds = %8
  store i32 -1, i32* %9, align 4
  br label %67

33:                                               ; preds = %8
  %34 = load i32, i32* %10, align 4
  %35 = load i8*, i8** %11, align 8
  %36 = load i32, i32* %12, align 4
  %37 = load i32, i32* %13, align 4
  %38 = load i8*, i8** %14, align 8
  %39 = load i64, i64* %15, align 8
  %40 = load %union.res_sockaddr_union*, %union.res_sockaddr_union** %20, align 8
  %41 = load i32, i32* %17, align 4
  %42 = call i32 @res_findzonecut2(i32 %34, i8* %35, i32 %36, i32 %37, i8* %38, i64 %39, %union.res_sockaddr_union* %40, i32 %41)
  store i32 %42, i32* %18, align 4
  store i32 0, i32* %19, align 4
  br label %43

43:                                               ; preds = %60, %33
  %44 = load i32, i32* %19, align 4
  %45 = load i32, i32* %18, align 4
  %46 = icmp slt i32 %44, %45
  br i1 %46, label %47, label %63

47:                                               ; preds = %43
  %48 = load %struct.in_addr*, %struct.in_addr** %16, align 8
  %49 = load i32, i32* %19, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %48, i64 %50
  %52 = load %union.res_sockaddr_union*, %union.res_sockaddr_union** %20, align 8
  %53 = load i32, i32* %19, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds %union.res_sockaddr_union, %union.res_sockaddr_union* %52, i64 %54
  %56 = bitcast %union.res_sockaddr_union* %55 to %struct.TYPE_2__*
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 0
  %58 = bitcast %struct.in_addr* %51 to i8*
  %59 = bitcast %struct.in_addr* %57 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %58, i8* align 4 %59, i64 4, i1 false)
  br label %60

60:                                               ; preds = %47
  %61 = load i32, i32* %19, align 4
  %62 = add nsw i32 %61, 1
  store i32 %62, i32* %19, align 4
  br label %43

63:                                               ; preds = %43
  %64 = load %union.res_sockaddr_union*, %union.res_sockaddr_union** %20, align 8
  %65 = call i32 @free(%union.res_sockaddr_union* %64)
  %66 = load i32, i32* %18, align 4
  store i32 %66, i32* %9, align 4
  br label %67

67:                                               ; preds = %63, %32
  %68 = load i32, i32* %9, align 4
  ret i32 %68
}

declare dso_local %union.res_sockaddr_union* @calloc(i32, i32) #1

declare dso_local i32 @res_findzonecut2(i32, i8*, i32, i32, i8*, i64, %union.res_sockaddr_union*, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @free(%union.res_sockaddr_union*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
